--- a/Game/Game.vcxproj.filters
+++ b/Game/Game.vcxproj.filters
@@ -14,5 +14,11 @@
     <ClCompile Include="Main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="GameFinal.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="GameFinal.h" />
   </ItemGroup>
 </Project>
