--- a/Game/Game.vcxproj.filters
+++ b/Game/Game.vcxproj.filters
@@ -9,6 +9,9 @@
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
+    <Filter Include="Game Components">
+      <UniqueIdentifier>{2e058dbd-b268-4405-a693-1731bdf8068d}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Main.cpp">
@@ -17,8 +20,14 @@
     <ClCompile Include="GameFinal.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="GameComponents\EnemyComponent.cpp">
+      <Filter>Game Components</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="GameFinal.h" />
+    <ClInclude Include="GameComponents\EnemyComponent.h">
+      <Filter>Game Components</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
